Move ${ENV:XX} resolution into the Configuration class
Signed-off-by: Jimmy Tanagra <jcode@tanagra.id.au>